--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "babel-cli": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "beefy": "^2.1.8",
     "browserify": "^13.1.0",
     "events": "^1.1.1",
